[package]
name = "openexr-viewer"
version = "0.1.0"
authors = ["a <a@a.com>"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
anyhow = "1.0.38"
openexr-rs = { path = "../openexr-core" }
env_logger = "0.8"
imgui = "0.7"
imgui-wgpu = { git = "https://github.com/parasyte/imgui-wgpu-rs.git", rev = "8da89b3ad1ef54384b7ff4bd550adf9f808df1f8" }
imgui-winit-support = "0.7"
log = "0.4"
pixels= { git = "https://github.com/parasyte/pixels.git", rev = "c522d12e0e06d9044be77ea7089e12f8bd12222e" }
winit = "0.24"
winit_input_helper = "0.9"